# MediSys

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  README.md  requirements-dev.txt  requirements.txt  run_app.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
doc/: architecture.md
docs/: doctor_guide.md
scripts/: build.sh  install_dependencies.sh  install_vulkan.sh  mock_build.sh  mock_frontend.py  mock_run.sh  reset_doctor_password.py  run.sh  setup_db.sh
src/backend/: CMakeLists.txt  main.cpp
src/backend/bindings/: pybind_module.cpp
src/backend/core/database/: db_manager.cpp  db_manager.h  schema.sql
src/backend/core/models/: department.cpp  department.h  doctor.cpp  doctor.h  patient.cpp  patient.h  user.cpp  user.h
src/backend/core/services/: auth_service.cpp  auth_service.h  patient_service.cpp  patient_service.h
src/frontend/: CMakeLists.txt
src/frontend/python/: main.py  simple_main.py
src/frontend/python/analytics/: kpi_analytics.py  medical_analytics.py
src/frontend/python/billing/: audit_report_generator.py  invoice_generator.py
src/frontend/python/gui/: admin_window.py  appointments_window.py  departments_window.py  doctor_window.py  doctors_window.py  login_window.py  patient_window.py  patients_window.py  reports_window.py
src/frontend/python/resources/: create_placeholders.py  doctor_quickstart.html
src/frontend/python/resources/styles/: theme.qss
src/tests/: CMakeLists.txt
src/tests/backend_tests/: test_auth_service.cpp  test_db_manager.cpp
src/tests/frontend_tests/: test_analytics.py  test_login.py
